Add new CSS files for health, economy, technology, and international pages; refactor Brasil styles and enhance modal component styles

--- a/pages/brasil.html
+++ b/pages/brasil.html
@@ -28,6 +28,11 @@
         iconSrc="/Assets/imgs/user.png"
     ></modal-component>
 
+    <modal-component-search
+        id="modal-search"
+        title="Pesquisar Noticias"
+    ></modal-component-search>
+
     <main>
         <article class="article">
             <news-header 
@@ -278,6 +283,7 @@
                 </div>
             </div>
         </article>
+        
         <most-read
             data-text1="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
             data-alt1="Imagem ilustrativa da matéria 1"
@@ -302,5 +308,12 @@
     <script src="/Assets/javascript/components/mostRead/mostReadTag.js"></script>
     <script src="/Assets/javascript/components/newsHeader/newsHeader.js"></script>
     <script src = '/Assets/javascript/components/modalComponetCadastrar/modalComponentCadastrar.js'></script>
+    <script src="/Assets//javascript/components/resultSearch/resultSearch.js"></script>
+    <script src="/Assets/javascript/components/InputSearch/InputSearch.js"></script>
+
+    <script src="/Assets/javascript/components/card/newsCard.js"></script>
+    <script src="/Assets/javascript/components/newsCategory/newsCategory.js"></script>
+    <script src = '/Assets/javascript/components/modalComponentSearch/ComponentSearch.js'></script>
+
 </body>
 </html>
