--- a/pages/ciencia.html
+++ b/pages/ciencia.html
@@ -27,6 +27,11 @@
         iconSrc="/Assets/imgs/user.png"
     ></modal-component>
 
+    <modal-component-search
+        id="modal-search"
+        title="Pesquisar Noticias"
+    ></modal-component-search>
+
     <main>
         <article class="article">
             <news-header 
@@ -36,8 +41,153 @@
         </article>
 
         <article class="article">
-            
-
+            <div class="content-of-the-subject">
+                <div class="container-div">
+                    <div class="image-container">
+                        <img src="/Assets/imgs/h5.png" alt="Imagem ilustrativa da matéria">
+                        <p class="caption">Vladimir Demikhov queria demonstrar as possibilidades de um novo campo da medicina da sua época: a transplantologia.</p>
+                    </div>
+                    <div class="text-container">
+                        <p>
+                            "É frequente, na medicina ou na cirurgia, que as pessoas não fiquem conhecidas pelos seus procedimentos médicos inovadores ou por avanços que levem a conquistas realmente importantes para a humanidade. Mas elas são facilmente recordadas por algo que fascine as pessoas."<br> 
+                            O autor da afirmação é o médico Igor Konstantinov. Cirurgião cardiotorácico de renome internacional, ele é formado em São Petersburgo, na Rússia, e trabalha no Royal Children's Hospital de Melbourne, na Austrália.<br>
+                            "E o que poderia fascinar mais as pessoas do que o transplante de uma segunda cabeça?", questionou ele, em entrevista à BBC.<br>
+                            Konstantinov estudou os trabalhos do cientista soviético Vladimir Demikhov (1916-1998).
+                        </p>
+                    </div>
+                </div>
+                <div class="text-container-body">
+                    <div>
+                        <p>
+                            Em 1959, Demikhov convidou o fotógrafo Howard Sochurek, da revista Life, para fotografar a ele e ao seu assistente, Vladimir Goriainov, enquanto eles realizavam sua mais nova cirurgia: a criação de um cachorro com duas cabeças.
+                        </p>
+                        <p>
+                            Quando Zochurek entrou na sala de cirurgia, ele ouviu os latidos de um pequeno cão com orelhas caídas e focinho pontudo. Demikhov explicou que se tratava de uma cadela de nove anos chamada Shavka. Ela seria o que ele chamou de "cabeça convidada".
+                        </p>
+                        <p>
+                            O chamado "cachorro anfitrião" era Brodyaga ("vagabundo", em russo), um vira-latas que havia sido recolhido por um laçador de cães em Moscou, então capital da União Soviética.
+                        </p>
+                        <p>
+                            A reportagem publicada na revista foi escrita pelo seu correspondente em Moscou, Edmund Stevens. Ele descreve o procedimento de três horas e meia em detalhes realistas.
+                            "Primeiro, eles fizeram uma incisão na base do pescoço do cachorro grande, expondo sua veia jugular, a aorta e um segmento da coluna vertebral...
+                        </p>
+                        <p>
+                            O corpo flácido de Shavka foi colocado na mesa de cirurgia ao lado de Brodyaga. Goriainov fez a incisão cuidadosamente...
+                        </p>
+                        <p>
+                            Depois, os dois cirurgiões suturaram a pele dos dois cachorros e a operação terminou."
+                        </p>
+                        <p>
+                            As fotos em preto e branco apareceram na edição da revista Life de julho de 1959. Elas mostram o espantoso resultado.
+                        </p>
+                    </div>
+                    <div class="container-div-list" style="margin-top: 2%;">
+                        <div class="image-container">
+                            <img src="/Assets/imgs/h11.png" alt="Imagem ilustrativa da matéria">
+                            <p class="caption">O cão de duas cabeças, criado pelo cientista soviético Vladimir Demikhov.</p>
+                        </div>
+                        <div class="text-container">
+                            <h3><strong>Animais torturados</strong></h3>
+                            <p style="margin-top: 2%;">
+                                A criatura viveu por quatro dias.<br>
+                                E aquele não foi o primeiro cão de duas cabeças criado por Vladimir Demikhov. Ele já havia realizado o mesmo experimento 23 vezes, com diferentes graus de sucesso. Uma das suas criações chegou a viver por 29 dias.<br>
+                                "Sinto emoções desencontradas quando vejo as imagens, pois são animais que, resumidamente, foram torturados", confessa Konstantinov.<br>
+                                Demikhov declarou à revista Life que o objetivo dos seus experimentos era demonstrar que é possível transplantar tecidos e órgãos saudáveis.<br>
+                                Atualmente, os transplantes são uma prática comum. Mas os primeiros transplantes de fígado e coração só foram realizados com sucesso no final da década de 1960.<br>
+                                Por isso, para os leitores da reportagem da revista Life na década de 1950, a visão de Demikhov sobre o futuro dos transplantes parecia tão grotesca quanto seus cachorros de duas cabeças.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="text-container-body">
+                        <div>
+                            <p>
+                                "Começaremos formando um banco de tecidos", explicou o médico soviético ao correspondente da revista em Moscou. "Com o tempo, ele incluirá todas as partes concebíveis da anatomia humana: córneas, globos oculares, fígados, rins, corações e até membros. Tudo será mantido em refrigeração."                            </p>
+                            <p>
+                                "Quando estivermos totalmente preparados, uma vítima de acidente será trazida com uma lesão em algum órgão essencial que, normalmente, seria fatal", prossegue Demikhov.
+                            </p>
+                            <p>
+                                "Como a pessoa iria morrer de qualquer forma, ela não tem absolutamente nada a perder. E trataremos de fornecer a ela o órgão necessário do nosso banco."
+                            </p>
+                            <p>
+                                "Se o transplante tiver sucesso, ela irá viver. Se não, boa sorte na próxima vez."
+                            </p>
+                        </div>
+                    </div>
+                    <div class="text-container" style="margin-top: 2%;">
+                        <h4><strong>Origens</strong></h4>
+                        <div style="margin-top: 2%; margin-left: 2%;">
+                            <p>
+                                Demikhov nasceu em 1916, em uma pobre família de pequenos agricultores. Seu pai morreu na Guerra Civil Russa (1917-1922) e sua mãe ficou determinada a dar boa educação aos seus três filhos.
+                            </p>
+                            <p>
+                                Ele estudou biologia na Universidade Estatal de Moscou, onde se formou com honras em 1940. E, ao longo dos 20 anos seguintes, Demikhov se dedicou a uma série de experimentos que impulsionariam o campo dos transplantes.
+                            </p>
+                            <p>
+                                Além dos cães de duas cabeças, Demikhov elaborou diversos estudos e processos experimentais extremamente inovadores
+                            </p>
+                            <p>
+                                Em 1937, o médico projetou o primeiro aparelho mecânico de assistência cardíaca.
+                            </p>
+                            <p>
+                                E, no início de 1946, ele realizou transplantes intratorácicos em mamíferos, de coração e pulmão – isoladamente e em conjunto. Eles foram os primeiros procedimentos deste tipo realizados em mamíferos com sucesso.
+                            </p>
+                            <p>
+                                Demikhov também foi responsável pela primeira operação de bypass da artéria coronariana e pelo primeiro transplante de fígado, entre outras façanhas.
+                            </p>
+                            <p>
+                                Ele chegou a cunhar a palavra "transplantologia", na sua tese de doutorado. Publicada em 1962 em Nova York (EUA), Berlim (Alemanha) e Madri (Espanha), ela se tornou o primeiro trabalho sobre transplantologia – e foi, por muito tempo, o único estudo disponível na área de transplante de órgãos e tecidos.
+                            </p>
+                            <p>
+                                "Considerando suas origens, é muito difícil entender por que ele teve este impulso incrível para realizar transplantes, apesar de todo o desastre econômico do seu país e da horrível guerra mundial, que recém havia terminado", destaca Konstantinov.
+                            </p>
+                            <p>
+                                "Só posso imaginar que ele tenha sido criado em uma sociedade muito utópica, na época em que o dinheiro significava muito pouco e se tentava fazer algo grandioso pelo seu país, em benefício da humanidade", prossegue ele. "Acredito que, no final, era só isso que importava."
+                            </p>
+                            <p>
+                                A contribuição de Demikhov para a transplantologia foi tão grande que o médico sul-africano Christiaan Barnard (1922-2001), autor do primeiro transplante bem sucedido de coração humano, chamou o médico soviético de "pai do transplante de coração e pulmão".
+                            </p>
+                            <p>
+                                Mas seus cachorros de duas cabeças ofuscaram seu trabalho positivo, especialmente na sua terra natal.
+                            </p>
+                        </div>
+                    </div>  
+                    <div class="container-div-list" style="margin-top: 2%;">
+                        <div class="image-container">
+                            <img src="/Assets/imgs/h13.png" alt="Imagem ilustrativa da matéria">
+                        </div>
+                        <div class="text-container">
+                            <h3><strong>Em setembro de 1959, durante o 18º Congresso Internacional de Cirurgia em Munique, na Alemanha, Demikhov demonstrou aos especialistas como implantar uma bomba intratorácica em um cachorro.</strong></h3>
+                            <p style="margin-top: 2%;">
+                                Em setembro de 1959, durante o 18º Congresso Internacional de Cirurgia em Munique, na Alemanha, Demikhov demonstrou aos especialistas como implantar uma bomba intratorácica em um cachorro. A bomba funcionava como coração artificial.<br>
+                                "Os funcionários o denunciaram como charlatão e seus experimentos foram proibidos", segundo Konstantinov.<br>
+                                "Ele precisou trabalhar no Departamento de Cirurgia que era dirigido por Alexander Vishnevsky [1906-1975], cirurgião-chefe do exército soviético, independente do Ministério da Saúde da URSS."<br>
+                                "Por isso, ele foi ironicamente protegido pelo exército soviético, para poder continuar com seus experimentos", prossegue o especialista.<br>
+                                Igor Konstantinov se formou na Academia Médica Militar de São Petersburgo, em 1992.<br>
+                                "Posso dizer que, tendo estudado medicina na União Soviética e trabalhado em seguida por dois anos na Rússia, nunca ouvi falar de Demikhov. Seu nome nunca foi mencionado."
+                            </p>
+                        </div>
+                        <div class="text-container-body">
+                            <div>
+                                <p>
+                                    Mas, em outros países, suas conquistas não são apenas conhecidas – elas são admiradas.                                                           
+                                </p>
+                                <p>
+                                    "Ele merece um lugar entre os grandes cirurgiões experimentais de todos os tempos. Não teve o reconhecimento geral a que tinha direito", declarou, por exemplo, a revista The Annals of Thoracic Surgery, em 1994.
+                                </p>
+                                <p>
+                                    Vladimir Demikhov morreu em 1998, com 82 anos de idade, no seu pequeno apartamento perto de Moscou. No ano da sua morte, ele foi reconhecido na Rússia e homenageado com a Ordem por Serviços à Pátria.
+                                </p>
+                                <p>
+                                    "Tudo o que ele fez foi pelo bem dos pacientes e muitos, muitos pacientes pelo mundo se beneficiaram, direta ou indiretamente, dos seus experimentos extremamente pioneiros", conclui Konstantinov.,
+                                </p>
+                                <p>
+                                    "Acredito que o mais importante, provavelmente, foi que ele conseguiu convencer as pessoas que o seguiam de que o impossível era possível."
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </article>
 
         <most-read
@@ -63,5 +213,11 @@
     <script src="/Assets/javascript/components/mostRead/mostReadTag.js"></script>
     <script src="/Assets/javascript/components/newsHeader/newsHeader.js"></script>
     <script src = '/Assets/javascript/components/modalComponetCadastrar/modalComponentCadastrar.js'></script>
+    <script src="/Assets//javascript/components/resultSearch/resultSearch.js"></script>
+    <script src="/Assets/javascript/components/InputSearch/InputSearch.js"></script>
+
+    <script src="/Assets/javascript/components/card/newsCard.js"></script>
+    <script src="/Assets/javascript/components/newsCategory/newsCategory.js"></script>
+    <script src = '/Assets/javascript/components/modalComponentSearch/ComponentSearch.js'></script>
 </body>
 </html>
