--- a/pages/economia.html
+++ b/pages/economia.html
@@ -27,13 +27,99 @@
         iconSrc="/Assets/imgs/user.png"
     ></modal-component>
 
+    <modal-component-search
+        id="modal-search"
+        title="Pesquisar Noticias"
+    ></modal-component-search>
+
     <main>
         <article class="article">
             <news-header 
-                title="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
-                authorInfo="Por Bianca Dahmer, César Willemberg e Mayara Meotti da ByteNews, em Ijuí <br> 25/08/2024 às 16:00 | Atualizado 25/08/2024 às 16:23">
-            </news-header>
+                title="Os planos da Coreia do Norte de reabrir para turismo após 5 anos"
+                authorInfo="Bianca Dahmer, César Willemberg e Mayara Meotti da ByteNews, em Ijuí <br> 19/08/2024 às 20:20 | Atualizado 19/08/2024 às 20:27"
+            ></news-header>
         </article>
+
+        <article class="article">
+            <div class="content-of-the-subject">
+                <div class="container-div">
+                    <div class="image-container">
+                        <img src="/Assets/imgs/h6.png" alt="Imagem ilustrativa da matéria">
+                        <p class="caption">Os planos da Coreia do Norte de reabrir para turismo após 5 anos.</p>
+                    </div>
+                    <div class="text-container">
+                        <p>
+                            A Coreia do Norte vai reabrir uma das suas cidades para turistas estrangeiros em dezembro, após quase cinco anos do fechamento de suas fronteiras devido à pandemia de covid-19, informaram operadoras de turismo.<br> 
+                            Pelo menos duas operadoras com sede na China anunciaram que os turistas em breve vão poder visitar a cidade de Samjiyon, localizada em uma região montanhosa, no norte do país.<br>
+                            A reclusa Coreia do Norte se isolou no início da pandemia, em 2020, e começou a reduzir as restrições somente em meados do ano passado.<br>
+                            O fechamento das fronteiras também interrompeu as importações de bens essenciais, levando à escassez de alimentos que foi agravada por sanções internacionais em decorrência do programa nuclear do país.
+                        </p>
+                    </div>
+                </div>
+                <div class="text-container-body">
+                    <div>
+                        <p>
+                            "Até agora, apenas Samjiyon foi oficialmente confirmada, mas achamos que Pyongyang e outros lugares também vão reabrir!!!", a KTG Tours, de Shenyang, escreveu em sua página do Facebook na quarta-feira (14/8).
+                        </p>
+                        <p>
+                            Já a Koryo Tour, de Pequim, disse que os turistas poderiam "potencialmente" visitar outras partes da Coreia do Norte em dezembro.
+                        </p>
+                        <p>
+                            "Após ter esperado mais de quatro anos para fazer este anúncio, a Koryo Tours está muito animada com a reabertura do turismo norte-coreano", afirmou a operadora, também na quarta-feira, em seu site.
+                        </p>
+                        <p>
+                            A Koryo Tours disse à BBC que as autoridades norte-coreanas estavam permitindo que turistas de qualquer país participassem das viagens, exceto da Coreia do Sul. No entanto, os EUA proíbem seus cidadãos de viajar para a Coreia do Norte.
+                        </p>
+                        <p>
+                            Chad O'Carroll, CEO da consultoria Korea Risk Group, com sede nos EUA, levantou dúvidas em relação ao anúncio de reabertura.
+                        </p>
+                        <p>
+                            "Vou acreditar quando vir isso", disse ele à BBC.
+                        </p>
+                        <p>
+                            "Por enquanto, estou bastante cético de que vamos ver qualquer movimento real em dezembro."
+                        </p>
+                    </div>
+                </div>
+                <div class="container-div-list" style="margin-top: 2%;">
+                    <div class="image-container">
+                            <img src="/Assets/imgs/h12.png" alt="Imagem ilustrativa da matéria">
+                    </div>
+                    <div class="text-container">
+                        <h3><strong>Localizada aos pés da montanha mais alta da Coreia do Norte, Samjiyon é conhecida por suas atrações de inverno.</strong></h3>
+                        <p>
+                            Samjiyon vem passando por um grande processo de revitalização nos últimos anos. Em julho, Kim Jong-un anunciou planos para reconstruir seu aeroporto, converter uma base militar em um resort de esqui e construir novas ferrovias e hotéis para turistas estrangeiros, de acordo com a mídia estatal.<br>
+                            Na época, Kim disse que os planos para "revitalizar o turismo internacional" seriam destinados a visitantes de nações "amigas".<br>
+                            O'Carroll destacou, no entanto, que o projeto de reforma de Samjiyong não está pronto.<br>
+                            "Se for concluído a tempo, posso imaginar apenas turistas russos e possivelmente chineses visitando em números reais no início", afirmou.<br>
+                            "A menos que [a República Democrática da Coreia] ofereça voos diretos de Samjiyon para um país de conexão neutro, como a Mongólia."<br>
+                            Samjiyon está localizada aos pés da montanha mais alta da Coreia do Norte, o Monte Paektu, que fica na fronteira entre a China e a Coreia do Norte — e é conhecida por suas atrações de inverno.
+                        </p>
+                        <div class="text-container-body">
+                            <div>
+                                <p>
+                                    A propaganda de Pyongyang diz que esta montanha é onde o fundador da Coreia do Norte, Kim Il Sung, lutou contra as forças de ocupação japonesas — e lançou a revolução. Ele é o avô do atual líder norte-coreano, Kim Jong Un.                                    
+                                </p>
+                                <p>
+                                    Também alega que o Monte Paektu é onde Kim Jong Il, antecessor e pai de Kim Jong Un, nasceu.
+                                    </p>
+                                <p>
+                                    A KCNA, agência estatal de notícias da Coreia do Norte, informou em julho que a região do Monte Paektu-Samjiyon foi concebida para ser uma "área turística montanhosa nas quatro estações, para atender às necessidades culturais e emocionais das pessoas no mais alto nível e revitalizar o turismo internacional".
+                                </p>
+                                <p>
+                                    No início deste ano, a Coreia do Norte permitiu que turistas russos entrassem no país, em meio ao fortalecimento dos laços entre os dois países.
+                                </p>
+                                <p>
+                                    Só em agosto do ano passado que a Coreia do Norte permitiu o retorno de cidadãos que foram impedidos de entrar por causa dos controles de fronteira, um dos últimos países a fazer isso.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
+
+
 
         <most-read
             data-text1="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
@@ -58,5 +144,11 @@
     <script src="/Assets/javascript/components/mostRead/mostReadTag.js"></script>
     <script src="/Assets/javascript/components/newsHeader/newsHeader.js"></script>
     <script src = '/Assets/javascript/components/modalComponetCadastrar/modalComponentCadastrar.js'></script>
+    <script src="/Assets//javascript/components/resultSearch/resultSearch.js"></script>
+    <script src="/Assets/javascript/components/InputSearch/InputSearch.js"></script>
+
+    <script src="/Assets/javascript/components/card/newsCard.js"></script>
+    <script src="/Assets/javascript/components/newsCategory/newsCategory.js"></script>
+    <script src = '/Assets/javascript/components/modalComponentSearch/ComponentSearch.js'></script>
 </body>
 </html>
