--- a/pages/internacional.html
+++ b/pages/internacional.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brasil - ByteNews.com</title>
+    <link rel="stylesheet" href="/Assets/styles/css/stylePages/internacional.css">
     <link rel="stylesheet" href="/Assets/styles/css/style.css">
 </head>
 <body>
@@ -27,13 +28,115 @@
         iconSrc="/Assets/imgs/user.png"
     ></modal-component>
 
+    <modal-component-search
+        id="modal-search"
+        title="Pesquisar Noticias"
+    ></modal-component-search>
+
     <main>
         <article class="article">
             <news-header 
-                title="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
-                authorInfo="Por Bianca Dahmer, César Willemberg e Mayara Meotti da ByteNews, em Ijuí <br> 25/08/2024 às 16:00 | Atualizado 25/08/2024 às 16:23">
+                title="4 incógnitas em torno do naufrágio do iate de luxo na Itália"
+                authorInfo="Por Bianca Dahmer, César Willemberg e Mayara Meotti da ByteNews, em Ijuí <br> 23/08/2024 às 11:00 | Atualizado 25/08/2024 às 11:05">
             </news-header>
         </article>
+
+        <article class="article">
+            <div class="content-of-the-subject">
+                <div class="container-div">
+                    <div class="image-container">
+                        <img src="/Assets/imgs/h2.png" alt="Imagem ilustrativa da matéria">
+                        <p class="caption">Seis corpos foram encontrados após o naufrágio do Bayesian na costa de Palermo,na Sicília.</p>
+                    </div>
+                    <div class="text-container">
+                        <p>
+                            Ainda demorará muito até que se saiba como foi exatamente o naufrágio do iate Bayesian que navegava sob a bandeira do Reino Unido.<br>
+                            O super iate de luxo transportava 22 pessoas quando uma forte tempestade que criou trombas d'água o atingiu na manhã de segunda-feira (19/8).<br>
+                            Seis corpos foram resgatados do naufrágio.<br>
+                            Especula-se sobre o que deu errado, e se a culpa foi do capitão, da tripulação ou por conta de falhas do próprio iate.<br>
+                            Mas especialistas disseram à BBC que provavelmente foi um fenômeno climático incomum e que ninguém é necessariamente culpado.<br>
+                            Estas são as principais perguntas que os investigadores farão ao apurar as causas da tragédia.<br>
+                            Os investigadores vão querer saber se a quilha estava “elevada, abaixada ou algo intermediário”, diz Jean-Baptiste Souppez, membro do Royal Institute of Naval Architects e editor-chefe do Journal of Sailing Technology.<br>
+                        </p>
+                    </div>
+                </div>
+                <div class="" style="margin-top: 2%;">
+                    <h3><strong>1. A quilha estava levantada? Se sim, por quê?</strong></h3>
+                    <div class="container-div">
+                        <div class="image-container">
+                            <img src="/Assets/imgs/h8.png" alt="Imagem ilustrativa da matéria">
+                        </div>
+                        <p style="margin-top: 2%;">
+                            Uma das principais questões enfrentadas pelos investigadores é o papel da quilha do navio.<br>
+                            A quilha é uma parte alongada do barco em forma de barbatana que se sobressai de sua base.<br>
+                            A parte inferior da quilha, que é a parte mais baixa do barco, contém um peso enorme, o bulbo, que mantém o barco estável.<br>
+                            Quando o vento empurra o barco para um lado, a quilha sobe na água até que, como uma gangorra, o peso da quilha empurra o barco para trás para nivelá-lo.<br>
+                            Em um barco do tamanho do Bayesian, as quilhas costumam ser projetadas para retrair, para que o navio possa atracar em áreas não tão profundas, como um porto.<br>
+                            Quando a quilha está numa posição elevada, o barco fica muito menos estável.<br>
+                            Neste caso, os restos do Bayesian foram encontrados a 50 m de profundidade, sugerindo que não havia razão para que a quilha precisasse ser retraída.<br>
+                            Mas isso não significa que o capitão ou a tripulação foram os culpados.<br>
+                            "Mesmo sem a quilha totalmente estendida, o barco é estável e apenas um grande fluxo de água poderia ter causado o naufrágio", disse o porta-voz do The Italian Sea Group, dono da empresa que construiu o Bayesian, ao jornal Telegraph.<br>
+                        </p>
+                    </div>
+                    <div class="text-container">
+                        <h3><strong>2. Que medidas a tripulação tomou durante o alerta meteorológico?</strong></h3>
+                        <p style="margin-top: 2%;">
+                            O capitão do Bayesian, James Cutfield, teria dito à imprensa italiana que não poderia ter previsto a tempestade que atingiu o iate. Mas sabemos que o mau tempo foi previsto de antemão.<br>
+                            Luca Mercalli, presidente da Sociedade Meteorológica Italiana, disse na terça-feira (20/8) que, dada a má previsão, a tripulação deveria ter se assegurado de que todos os convidados estavam acordados e que todos tivessem coletes salva-vidas.<br>
+                            Um sobrevivente teria dito à equipe médica que o navio começou a afundar apenas dois minutos depois de ela dormir.<br>
+                        </p>
+                    </div>
+                    <div class="container-div" style="margin-top: 2%;">
+                        <div class="text-container">
+                            O mau tempo é uma coisa, mas uma tromba d’água marinha é algo totalmente diferente. E não é algo que a tripulação pudesse ter previsto.<br>
+                            Um especialista local na Sicília disse à agência de notícias Reuters que o primeiro foco da investigação seria se a tripulação do iate não havia fechado as escotilhas de acesso antes do mau tempo chegar.<br>
+                            Mas, num navio deste tamanho, as escotilhas abertas por si só provavelmente não teriam sido suficientes para causar o afundamento do Bayesian, dizem os especialistas.<br>
+                            Existem também outros pontos de entrada de água ao redor do navio, conhecidos como “pontos de inundação”, que existem para permitir a ventilação da casa de máquinas, entre outras coisas.<br>
+                        </div>
+                        <div class="image-container">
+                            <img src="/Assets/imgs/h9.png" alt="Imagem ilustrativa da matéria">
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <p>
+                        “Obviamente haverá perguntas sobre a tripulação, o que aconteceu e se eles estavam preparados”, diz Souppez. <br>
+                        “Mas acho importante lembrar que o navio afundou em questão de minutos, então, na realidade, para a tripulação conseguir manter vivas tantas pessoas a bordo no meio da noite, lançar o sinalizador e agir no estresse do momento é uma tarefa difícil", ressalta.”
+                        <br>
+                        “É muito difícil dizer com precisão o que aconteceu aqui”, disse Paul Stott, membro do Royal Institute of Naval Architects. <br>
+                        “Mas é improvável que a tripulação pudesse ter reagido de alguma forma para salvar o iate diante de um evento climático tão repentino e catastrófico.”
+                    </p>
+                </div>
+                <div>
+                    <h2><strong>3. Como o navio afundou tão rapidamente?</strong></h2>
+                    <p>
+                        Um médico que tratou dos sobreviventes indicou que o barco “virou em poucos minutos”.<br>
+                        Uma questão fundamental é como exatamente isso aconteceu e como aconteceu tão rapidamente.<br>
+                        “Para o barco afundar, especialmente nessa velocidade, a água entra no barco em toda a sua extensão”, diz Jean-Baptiste Souppez.<br>
+                        “Barcos como este não foram projetados para resistir a qualquer período de tempo a 90 graus”, acrescenta.<br>
+                        "Portanto, se o navio estivesse a 90 graus, então seria de esperar que a água entrasse, independentemente se as escotilhas estivessem abertas ou não. Embora isso obviamente acelerasse o processo." <br>
+                        Alguns especularam que uma tromba d'água marinha que sobrevoava o Bayesian poderia ter sido "estourada" pelo mastro, despejando uma grande quantidade de água no navio e afundando-o rapidamente. <br>
+                    </p>
+                </div>
+                <div>
+                    <h2><strong>4. Foi apenas um acidente incomum, causado pelo clima?</strong></h2>
+                    <p>
+                        Testemunhas disseram que viram uma tromba d'água se formar durante a tempestade antes do afundamento do Bayesian. <br>
+                        A maioria das pessoas sabe como são os tornados: são colunas giratórias de ventos destrutivos que se projetam da base das nuvens até o solo<br>
+                        De acordo com especialistas em meteorologia da BBC, as trombas d'água também são assim, mas ocorrem sobre a água e não sobre a terra.<br>
+                        Com o aumento da temperatura do mar devido às alterações climáticas, há preocupações de que se tornem mais comuns.<br>
+                        De acordo com o Centro Internacional de Pesquisa de Trombas Marinhas, ocorreram 18 trombas d'água confirmadas na costa da Itália somente no dia 19 de agosto.<br>
+                        Mas a probabilidade de uma delas atingir diretamente um navio, como se especula que poderia ter acontecido aqui, permanece muito baixa.<br>
+                        “Acho que o resultado final será que, mesmo que tenha havido problemas com a quilha ou com as escotilhas abertas, provavelmente ainda estamos diante de um acidente climático incomum”, diz Souppez.<br>
+                        Por sua vez, Paul Stott diz que “é provável que este seja um projeto moderno muito seguro que encontrou condições climáticas anormais para as quais nada foi projetado”.<br>
+                    </p>
+                </div>
+            </div>
+        </article>
+
+
+
+
 
         <most-read
             data-text1="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
@@ -58,6 +161,12 @@
     <script src="/Assets/javascript/components/mostRead/mostReadTag.js"></script>
     <script src="/Assets/javascript/components/newsHeader/newsHeader.js"></script>
     <script src = '/Assets/javascript/components/modalComponetCadastrar/modalComponentCadastrar.js'></script>
+    <script src="/Assets//javascript/components/resultSearch/resultSearch.js"></script>
+    <script src="/Assets/javascript/components/InputSearch/InputSearch.js"></script>
+
+    <script src="/Assets/javascript/components/card/newsCard.js"></script>
+    <script src="/Assets/javascript/components/newsCategory/newsCategory.js"></script>
+    <script src = '/Assets/javascript/components/modalComponentSearch/ComponentSearch.js'></script>
     
 </body>
 </html>
