--- a/pages/saude.html
+++ b/pages/saude.html
@@ -27,12 +27,127 @@
         iconSrc="/Assets/imgs/user.png"
     ></modal-component>
 
+    <modal-component-search
+        id="modal-search"
+        title="Pesquisar Noticias"
+    ></modal-component-search>
+
     <main>
         <article class="article">
             <news-header 
-                title="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
-                authorInfo="Por Bianca Dahmer, César Willemberg e Mayara Meotti da ByteNews, em Ijuí <br> 25/08/2024 às 16:00 | Atualizado 25/08/2024 às 16:23">
-            </news-header>
+                title="Britânico é o primeiro a tomar nova vacina contra câncer no pulmão"
+                authorInfo="Bianca Dahmer, César Willemberg e Mayara Meotti da ByteNews, em Ijuí <br> 23/08/2024 às 21:00 | Atualizado 25/08/2024 às 21:03"
+            ></news-header>
+        </article>
+
+        <article class="article">
+            <div class="text-container-body">
+                <div>
+                    <p>
+                        Um homem de 67 anos se tornou a primeira pessoa no Reino Unido a testar o que os médicos esperam que seja um novo tratamento revolucionário para o câncer de pulmão — uma vacina que diz ao corpo como combater e matar a doença.
+                    </p>
+                    <p>
+                        O imunizante utiliza a tecnologia de RNA mensageiro (mRNA), a mesma usada em algumas vacinas contra covid-19 para dar instruções ao sistema imunológico.
+                    </p>
+                    <p>
+                        O ensaio clínico em estágio inicial do qual Janusz Racz está participando vai verificar se a vacina é segura.
+                    </p>
+                    <p>
+                        Cerca de 34 centros de pesquisa em sete países, incluindo a University College London (UCL), no Reino Unido, vão recrutar 130 pacientes para testá-la.
+                    </p>
+                </div>
+                <div class="text-container-com-titulo">
+                    <h3><strong>Altamente direcionado</strong></h3>
+                    <div class="text-container">
+                        <p>
+                            O imunizante contém informações sobre vários marcadores encontrados na superfície das células do câncer de pulmão para ensinar ao sistema imunológico do paciente o que encontrar e combater.
+                        </p>
+                        <p>
+                            A vacina BNT116, feita pela empresa alemã de biotecnologia BioNTech, pode ser um divisor de águas, dizem os especialistas.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-div-list" style="margin-top: 2%;">
+                    <div class="image-container">
+                        <img src="/Assets/imgs/h4.png" alt="Imagem ilustrativa da matéria">
+                    </div>
+                    <div class="text-container">
+                        <h3><strong>Janusz Racz, 67 anos, diz que está 'aberto a experimentar coisas novas'.</strong></h3>
+                        <p style="margin-top: 2%;">
+                            "Esperamos dar início a esta nova era de tratamento com vacina de mRNA para câncer de pulmão", afirmou Siow Ming Lee, que está liderando o ensaio clínico no Reino Unido, ao programa Today, da BBC.
+                        </p>
+                        <p>
+                            "Esperamos que, em combinação com o tratamento padrão atual — imunoterapia e quimioterapia — possamos fornecer um reforço imunológico adicional."
+                        </p>
+                        <p>
+                            Racz, morador de Londres, diz que está aberto a experimentar coisas novas.
+                        </p>
+                        <p>
+                            "Espero que forneça uma defesa contra as células cancerígenas. Mas também pensei que minha participação nesta pesquisa poderia ajudar outras pessoas no futuro, e ajudar este tratamento a se tornar mais amplamente disponível."
+                        </p>
+                    </div>
+                </div>
+                <div class="text-container-body">
+                    <div>
+                        <p>
+                            "Como cientista, sei que a ciência só pode avançar se as pessoas concordarem em participar de programas como este."                            
+                        </p>
+                        <p>
+                            Racz, que trabalha com inteligência artificial, foi diagnosticado com câncer de pulmão depois de ter tido alguns problemas respiratórios que ele achava que poderiam ser asma.
+                        </p>
+                        <p>
+                            Um exame de imagem (para um problema não relacionado) revelou um tumor em seu pulmão direito.
+                        </p>
+                        <p>
+                            Cally Palmer, diretora nacional da área de oncologia do NHS England, o serviço público de saúde da Inglaterra, acredita que vacinas como esta podem ser "revolucionárias" na imunização de pessoas contra seus próprios cânceres para evitar que a doença retorne.
+                        </p>
+                        <p>
+                            "Um diagnóstico de câncer é muito preocupante, mas o acesso a ensaios clínicos inovadores — aliados a outras inovações para diagnosticar e tratar o câncer mais cedo — dá esperança."
+                        </p>
+                        <p>
+                            "Esperamos ver milhares de pacientes participando de ensaios clínicos nos próximos anos", ela acrescentou.
+                        </p>
+                        <p>
+                            O ensaio clínico vai recrutar pessoas com câncer de pulmão de células não pequenas (CPCNP) desde o estágio inicial antes da cirurgia ou radioterapia, até a doença em estágio avançado ou recidiva do câncer — para tomar a vacina junto à imunoterapia padrão.
+                        </p>
+                        <p>
+                            Há várias outras vacinas sendo usadas contra diferentes tipos de câncer.
+                        </p>
+                        <p>
+                            Diferentemente das vacinas para nos proteger de doenças infecciosas, como o sarampo, as vacinas para tratamento do câncer são destinadas a pessoas que já têm a doença.
+                        </p>
+                        <p>
+                            Elas ajudam o sistema imunológico do seu organismo a reconhecer e atacar as células cancerígenas.
+                        </p>
+                        <p>
+                            Algumas, como esta última, são desenvolvidas com base em marcadores comuns que tendem a ocorrer apenas em células cancerígenas. Outras são personalizadas ou feitas sob medida para combater o tumor específico de um indivíduo.
+                        </p>
+                        <p>
+                            "Estamos contentes em ver que outro ensaio clínico de vacina contra o câncer foi aberto no Reino Unido, permitindo que mais pacientes tenham acesso a tratamentos de ponta", afirmou a CEO da organização Cancer Research UK, Michelle Mitchell.
+                        </p>
+                        <P>
+                            "A ciência que nos ajudou a sair do pior da pandemia de covid-19 continua a se mostrar promissora como uma opção potencial de tratamento para pacientes."
+                        </P>
+                        <p>
+                            "Embora esteja em estágio bastante inicial, estamos ansiosos para ver como o estudo avança", acrescentou.
+                        </p>
+                        <p>
+                            O câncer de pulmão continua sendo a principal causa de morte por câncer no mundo, com uma estimativa de 1,8 milhão em 2020. O câncer de pulmão de células não pequenas é o tipo mais comum da doença
+                        </p>
+                        <p>
+                            Em geral, não há sinais ou sintomas nos estágios iniciais, mas os motivos para consultar um médico incluem:
+                        </p>
+                        <div class="text-container" style="margin-top: 2%;">
+                            <ul style="margin-left: 2%;">
+                                <li> Uma tosse que não desaparece após algumas semanas;</li>
+                                <li>Uma tosse de longa data que piora;</li>
+                                <li>Infecções no peito recorrentes; </li>
+                                <li>Tosse com sangue.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </article>
 
         <most-read
@@ -58,5 +173,11 @@
     <script src="/Assets/javascript/components/mostRead/mostReadTag.js"></script>
     <script src="/Assets/javascript/components/newsHeader/newsHeader.js"></script>
     <script src = '/Assets/javascript/components/modalComponetCadastrar/modalComponentCadastrar.js'></script>
+    <script src="/Assets//javascript/components/resultSearch/resultSearch.js"></script>
+    <script src="/Assets/javascript/components/InputSearch/InputSearch.js"></script>
+
+    <script src="/Assets/javascript/components/card/newsCard.js"></script>
+    <script src="/Assets/javascript/components/newsCategory/newsCategory.js"></script>
+    <script src = '/Assets/javascript/components/modalComponentSearch/ComponentSearch.js'></script>
 </body>
 </html>
