--- a/pages/tecnologia.html
+++ b/pages/tecnologia.html
@@ -27,13 +27,100 @@
         iconSrc="/Assets/imgs/user.png"
     ></modal-component>
 
+    <modal-component-search
+        id="modal-search"
+        title="Pesquisar Noticias"
+    ></modal-component-search>
+
     <main>
         <article class="article">
             <news-header 
-                title="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
-                authorInfo="Por Bianca Dahmer, César Willemberg e Mayara Meotti da ByteNews, em Ijuí <br> 25/08/2024 às 16:00 | Atualizado 25/08/2024 às 16:23">
-            </news-header>
+                title="Como a China conseguiu evitar o pior do colapso tecnológico global"
+                authorInfo="Bianca Dahmer, César Willemberg e Mayara Meotti da ByteNews, em Ijuí <br> 21/07/2024 às 17:00 | Atualizado 25/08/2024 às 17:35"
+            ></news-header>
         </article>
+
+        <article class="article">
+            <div class="content-of-the-subject">
+                <div class="container-div">
+                    <div class="image-container">
+                        <img src="/Assets/imgs/h3.png" alt="Imagem ilustrativa da matéria">
+                        <p class="caption">Imagens como esta foram significativamente menos frequentes na China do que no resto do mundo.</p>
+                    </div>
+                    <div class="text-container">
+                        <p>
+                            Enquanto a maior parte do mundo lidava com a temida tela azul da morte na sexta-feira, um país que conseguiu escapar em grande parte ileso foi a China.<Br>
+                            A razão é bastante simples: o CrowdStrike é pouco utilizado lá. Poucas organizações compram software de uma empresa americana que, no passado, tem sido crítica em relação à ameaça cibernética representada por Pequim.<br>
+                            Além disso, a China não depende tanto da Microsoft quanto o resto do mundo. Empresas domésticas como Alibaba, Tencent e Huawei dominam o setor de serviços em nuvem.<br>
+                            Portanto, os relatos de interrupções na China, quando ocorreram, foram principalmente em empresas ou organizações estrangeiras. Em sites de mídia social chineses, por exemplo, alguns usuários reclamaram que não<br>
+                            conseguiam fazer check-in em cadeias internacionais de hotéis como Sheraton, Marriott e Hyatt nas cidades chinesas.<br>s
+                        </p>
+                    </div>
+                </div>
+                <div class="text-container-body">
+                    <div>
+                        <p>
+                            Nos últimos anos, organizações governamentais, empresas e operadores de infraestrutura têm substituído cada vez mais os sistemas de TI estrangeiros por nacionais. Alguns analistas chamam essa rede paralela de "splinternet".
+                        </p>
+                        <p>
+                            "É um testemunho da estratégia da China no gerenciamento das operações tecnológicas estrangeiras," afirma Josh Kennedy White, um especialista em cibersegurança baseado em Singapura.
+                        </p>
+                        <p>
+                            "A Microsoft opera na China através de um parceiro local, a 21Vianet, que gerencia seus serviços de forma independente da sua infraestrutura global. Esse arranjo isola os serviços essenciais da China - como bancos e aviação - de interrupções globais."
+                        </p>
+                        <p>
+                            Pequim vê a redução da dependência de sistemas estrangeiros como uma forma de fortalecer a segurança nacional.
+                        </p>
+                        <p>
+                            Isso é semelhante à maneira como alguns países ocidentais baniram a tecnologia da empresa chinesa Huawei em 2019, ou a decisão do Reino Unido de proibir o uso do TikTok, de propriedade chinesa, em dispositivos governamentais em 2023.
+                        </p>
+                        <p>
+                            Desde então, os Estados Unidos lançaram um esforço concentrado para proibir a venda de tecnologias avançadas de chips semicondutores para a China, além de tentar impedir que empresas americanas investam em tecnologia chinesa.
+                        </p>
+                        <p>
+                            "Nunca vivi algo tão aterrorizante. Havia tanta cinza e fuligem dentro dos apartamentos...
+                            Mesmo com tudo fechado. Falei para minha filha: 'Parece que o fogo está aqui dentro'. É difícil
+                            respirar".
+                        </p>
+                        <p>
+                            O governo dos EUA afirma que todas essas restrições são motivadas por questões de segurança nacional.
+                        </p>
+                    </div>
+                    <div class="container-div-list" style="margin-top: 2%;">
+                        <div class="image-container">
+                            <img src="/Assets/imgs/h10.png" alt="Imagem ilustrativa da matéria">
+                            <p class="caption">O aeroporto de Hong Kong sofreu algumas consequências devido à interrupção dos serviços.</p>
+                        </div>
+                            <p>
+                                Um editorial publicado no sábado pelo jornal estatal Global Times fez uma referência velada àsrestrições impostas à tecnologia chinesa.<br>
+                                "Alguns países falam constantemente sobre segurança, generalizam o conceito de segurança, mas ignoram a verdadeira segurança; isso é irônico", afirmou o editorial.<br>
+                                O argumento é que os EUA tentam ditar as regras sobre quem pode usar a tecnologia global e como ela deve ser usada, enquanto uma de suas próprias empresas causou um caos global devido à falta de cuidado.<br>
+                                O Global Times também criticou os gigantes da internet que "monopolizam" a indústria: "Confiar exclusivamente nas principais empresas para liderar os esforços de segurança na rede, como alguns países defendem, pode não apenas prejudicar o compartilhamento.<br>
+                            </p>
+                    </div>
+                </div>
+            </div>
+            <div class="text-container-body">
+                <div>
+                    <p>
+                        inclusivo dos resultados de governança, mas também introduzir novos riscos de segurança."
+                    </p>
+                    <p>
+                    A referência ao "compartilhamento" provavelmente alude ao debate sobre propriedade intelectual, já que a China é frequentemente acusada de copiar ou roubar tecnologia ocidental. Pequim insiste que isso não é o caso e defende um mercado global de tecnologia aberto, embora mantenha um controle rigoroso sobre o cenário doméstico.
+                    </p>
+                    <p>  
+                    No entanto, nem tudo na China ficou totalmente imune. Um pequeno número de trabalhadores expressou agradecimento a um gigante do software americano por encerrar sua semana de trabalho mais cedo.
+                    </p>
+                    <p>
+                    "Obrigado, Microsoft, por uma férias antecipada" foi tendência na rede social Weibo na sexta-feira, com usuários postando fotos de telas de erro azul.
+                    </p>
+                </div>
+            </div>
+        </article>
+
+
+
+
 
         <most-read
             data-text1="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
@@ -58,5 +145,11 @@
     <script src="/Assets/javascript/components/mostRead/mostReadTag.js"></script>
     <script src="/Assets/javascript/components/newsHeader/newsHeader.js"></script>
     <script src = '/Assets/javascript/components/modalComponetCadastrar/modalComponentCadastrar.js'></script>
+    <script src="/Assets//javascript/components/resultSearch/resultSearch.js"></script>
+    <script src="/Assets/javascript/components/InputSearch/InputSearch.js"></script>
+
+    <script src="/Assets/javascript/components/card/newsCard.js"></script>
+    <script src="/Assets/javascript/components/newsCategory/newsCategory.js"></script>
+    <script src = '/Assets/javascript/components/modalComponentSearch/ComponentSearch.js'></script>
 </body>
 </html>
